--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=OficinaVirtual_Manuel_Lazaro_Velasco
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
